Upgraded to tailwind 1.0

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,9 +1,9 @@
-@tailwind preflight;
+@tailwind base;
 
 @tailwind components;
 
 a {
-  @apply text-blue-light no-underline;
+  @apply text-blue-400;
 }
 
 .content {
@@ -45,16 +45,16 @@ table {
 }
 
 table tr {
-  @apply bg-white border-t border-grey-light;
+  @apply bg-white border-t border-gray-400;
 }
 
 table th, table td {
-  @apply border border-grey-light py-2 px-4;
+  @apply border border-gray-400 py-2 px-4;
 }
 
 
 .search-results em {
-  @apply roman bg-blue-lighter;
+  @apply not-italic bg-blue-200;
 }
 /* purgecss end ignore */
 
